# tri-mastery-experiments

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/tracking-deployment-vps/: deployment_receipt.json  hardening_manifest.json  hardening_receipt.json  manifest.json
artifacts/tracking-surface-v1/: derived_visit_aggregate.json  manifest.json  tracking_instrument_seal.json
artifacts/tracking-surface-v1/public/: tm-v1-alpha-conversations.html  tm-v1-null-duck.html  tm-v1-receipt-loop.html
artifacts/twitter-funnel-v1/: manifest.json  twitter_funnel_prereg.json
scripts/: backup_tri_mastery_tracking.sh
src/tri_mastery_experiments/: __init__.py  server.py  tracking.py  twitter_funnel.py
tests/: test_server.py  test_tracking_surface.py  test_twitter_funnel_prereg.py
